--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
             </div>
             <div class="content2">
-                
+                <h2> abc xyz </h2>
             </div>
         </div>
         <form action="">
