This is a new commit for what I originally planned to be amended

--- a/index.html
+++ b/index.html
@@ -58,10 +58,13 @@
                 <div class="upcoming-events">
                     <h2>Upcoming Events</h2>
                 </div>
-                <div class="doodle-list">
+                <div class="doodle-upcoming">
                 </div>
                 <div class="special-theme">
-                    <h2>Special Theme</h2>
+                    <h2>Newest Theme</h2>
+                </div>
+                <div class="all-theme">
+                    <h2>All Doodle</h2>
                 </div>
             </div>
             <div class="content2">
