update doodle newest API, config manifest.json

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <input type="number" name="" id="timer" placeholder="Seconds">
             <button id="changeDoodle">Change Doodle</button>
         </form>
-        <script src="changeTab.js"></script>
+        <!-- <script src="changeTab.js"></script> -->
         <script src="./popup.js"></script>
         <script src="./size.js"></script>
 
