--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
                 </div>
                 <div class="doodle-upcoming">
                 </div>
-                <div class="special-theme">
-                    <h2>Newest Theme</h2>
-                </div>
-                <div class="all-theme">
+                <div class="upcoming-events">
                     <h2>All Doodle</h2>
+                </div>
+                <div class="all-doodle">
+
                 </div>
             </div>
             <div class="content2">
