Change a bit UI

--- a/index.html
+++ b/index.html
@@ -53,20 +53,40 @@
                 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
             </div>
             <div class="content1">
+                <!-- YOUR DOODLE -->
+                <div class="upcoming-events">
+                    <h2>Your Doodle</h2>
+                </div>
+                <div class="box-doodle">
+                    <a class="btn prevYour">&#10094;</a>
+                    <div class="your-doodle">
+                    </div>
+                    <a class="btn nextYour">&#10095;</a>
+                </div>
+                <!-- UPCOMING DOODLE -->
                 <div class="upcoming-events">
                     <h2>Upcoming Events</h2>
                 </div>
-                <div class="doodle-upcoming">
+                <div class="box-doodle">
+                    <a class="btn prevUpcome">&#10094;</a>
+                    <div class="doodle-upcoming">
+                    </div>
+                    <a class="btn nextUpcome">&#10095;</a>
                 </div>
+
+                <!-- ALL DOODLE -->
                 <div class="upcoming-events">
                     <h2>All Doodle</h2>
                 </div>
-                <div class="all-doodle">
-
+                <div class="box-doodle">
+                    <a class="btn prevAll">&#10094;</a>
+                    <div class="all-doodle">
+                    </div>
+                    <a class="btn nextAll">&#10095;</a>
                 </div>
             </div>
             <div class="content2">
-                
+
             </div>
 
         </div>
